[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "rtds-circuit-analysis"
version = "0.1.1"
authors = [
  { name="Guilherme Natan", email="guilherme.natan.braga@gmail.com" },
]
description = "Solve electrical circuits"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["sympy>=1.13.3", "networkx>=3.4.2", "scipy>=1.16.3" , "pytest>=8.3.5"]
license = "MIT"
license-files = ["LICENSE"]

[project.scripts]
rtds-circuit-analysis = "rtds_cli.app:app"
rtds-vitis = "rtds_vitis.app:app"

[project.urls]
Homepage = "https://pypi.org/project/rtds-circuit-analysis/"
Documentation = "https://rtds-circuit-analysis.readthedocs.io/en/latest/"
Repository = "https://github.com/Guilherme-Natan/rtds-circuit-analysis"

[project.optional-dependencies]
dev = ["sphinx", "sphinx_rtd_theme", "sphinx-design", "sphinx-argparse", "pytest"]
